gccida/c1/prepare_operand
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prepare_operand/src/optabs.c:3709:52: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  prepare_operand( int icode, rtx x, int opnum, machine_mode mode, machine_mode wider_mode, int unsignedp) 
                                                   ^
                                                   enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prepare_operand/src/optabs.c:3709:71: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  prepare_operand( int icode, rtx x, int opnum, machine_mode mode, machine_mode wider_mode, int unsignedp) 
                                                                      ^
                                                                      enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prepare_operand/src/optabs.c:3719:11: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
operand = insn_data_0[icode].operand; 
          ^~~~~~~~~~~
          insn_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prepare_operand/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prepare_operand/src/optabs.c:3720:40: error: use of undeclared identifier 'machine_mode'
if ( !operand[opnum].predicate( v11, ( machine_mode)*( ( unsigned __int16 *)&operand[opnum] + 8)) ) 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prepare_operand/src/optabs.c:3721:28: error: use of undeclared identifier 'machine_mode'
return copy_to_mode_reg( ( machine_mode)*( ( unsigned __int16 *)&operand[opnum] + 8), v11); 
                           ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/prepare_operand/src/obj/optabs.o] Error 1
